# roll-call

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MAVERICK_CONTEXT.md  Makefile  NOTICE.md  README.md  pyproject.toml  render.yaml
app/: ingest.py  main.py  models.py  optimizer.py  reporter.py
docs/: DEPLOYMENT.md
templates/: dashboard.html  results.html  upload.html
tests/fixtures/: student_roster.csv  teacher_roster.csv
